--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,32 +6,45 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: stable
+          flutter-version: '3.22.3'
+          channel: 'stable'
 
-      - name: Flutter pub get
+      - name: Verify Flutter installation
+        run: flutter --version
+
+      - name: Get dependencies
         run: flutter pub get
 
-      - name: Build Web
+      - name: Analyze project
+        run: flutter analyze || true
+
+      - name: Build Web version
         run: flutter build web --release
 
       - name: Zip Web build
-        run: cd build/web && zip -r ../web-build.zip . && ls -lah ../web-build.zip
+        run: |
+          cd build/web
+          zip -r ../../web-build.zip .
+          cd ../..
+        continue-on-error: true
 
       - name: Upload Web artifact
         uses: actions/upload-artifact@v4
         with:
           name: web-build
-          path: build/web-build.zip
+          path: web-build.zip
 
       - name: Build APK
         run: flutter build apk --release
+        continue-on-error: true
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
