--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Flutter (Web & APK)
+name: Build Flutter Web & Android
 
 on:
   workflow_dispatch:
@@ -6,7 +6,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -14,40 +13,37 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.3'
-          channel: 'stable'
+          flutter-version: '3.22.2'
+          channel: stable
 
-      - name: Verify Flutter installation
-        run: flutter --version
-
-      - name: Get dependencies
+      - name: Install dependencies
         run: flutter pub get
 
-      - name: Analyze project
-        run: flutter analyze || true
+      - name: Flutter doctor
+        run: flutter doctor -v
 
-      - name: Build Web version
+      - name: Build Flutter Web
         run: flutter build web --release
 
-      - name: Zip Web build
+      - name: Archive Web build
         run: |
           cd build/web
-          zip -r ../../web-build.zip .
+          zip -r ../../web_build.zip .
           cd ../..
         continue-on-error: true
 
       - name: Upload Web artifact
         uses: actions/upload-artifact@v4
         with:
-          name: web-build
-          path: web-build.zip
+          name: web_build
+          path: web_build.zip
 
-      - name: Build APK
+      - name: Build Flutter APK
         run: flutter build apk --release
         continue-on-error: true
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: app-release
+          name: app_release
           path: build/app/outputs/flutter-apk/app-release.apk
