--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -16,11 +17,17 @@ jobs:
           flutter-version: '3.22.2'
           channel: stable
 
-      - name: Install dependencies
+      - name: Enable Linux dependencies
+        run: sudo apt-get update -y && sudo apt-get install -y libgtk-3-dev liblzma-dev zip unzip
+
+      - name: Verify Flutter installation
+        run: flutter doctor -v
+
+      - name: Get Flutter packages
         run: flutter pub get
 
-      - name: Flutter doctor
-        run: flutter doctor -v
+      - name: Analyze project
+        run: flutter analyze || true
 
       - name: Build Flutter Web
         run: flutter build web --release
