--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         run: flutter analyze || true
 
       - name: Build Flutter Web
-        run: flutter build web --release
+        run: flutter build web --release --target=lib/main.dart
 
       - name: Archive Web build
         run: |
