--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,3 +49,11 @@ jobs:
         with:
           name: app_release
           path: build/app/outputs/flutter-apk/app-release.apk
+          - name: Deploy to Netlify
+        uses: nwtgck/actions-netlify@v2.0
+        with:
+          publish-dir: ./build/web
+          production-deploy: true
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
