--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,28 @@
 
 [[plugins]]
   package = "@netlify/plugin-functions-install-core"
+[[headers]]
+for = "/sw.js"
+  [headers.values]
+  Cache-Control = "no-cache, no-store, must-revalidate"
+
+[[headers]]
+for = "/index.html"
+  [headers.values]
+  Cache-Control = "no-cache"
+
+[[headers]]
+for = "/assets/*"
+  [headers.values]
+  Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+for = "/canvaskit/*"
+  [headers.values]
+  Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+for = "/main.dart.js"
+  [headers.values]
+  # Чуть менее агрессивно, чтобы обновления прилетали быстрее
+  Cache-Control = "public, max-age=300, must-revalidate"
