--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,13 +1,30 @@
 {
   "name": "Sport Diary",
-  "short_name": "Diary",
+  "short_name": "SportDiary",
+  "description": "Тренировочный дневник и анализ прогресса в триатлоне и выносливых видах спорта.",
   "start_url": "/",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#ffffff",
-  "theme_color": "#2196f3",
-  "description": "Sport Diary — минимальный билд",
+  "theme_color": "#0d47a1",
+  "lang": "ru",
+  "scope": "/",
   "icons": [
-    { "src": "icons/Icon-192.svg", "sizes": "192x192", "type": "image/svg+xml" },
-    { "src": "icons/Icon-512.svg", "sizes": "512x512", "type": "image/svg+xml" }
+    {
+      "src": "/icons/Icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/Icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/maskable_icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
   ]
 }
