--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,30 +1,38 @@
 {
   "name": "Sport Diary",
   "short_name": "SportDiary",
-  "description": "Тренировочный дневник и анализ прогресса в триатлоне и выносливых видах спорта.",
-  "start_url": "/",
+  "description": "Спортивный дневник для триатлета. Аналитика, тренировки и интеграция со Strava.",
+  "start_url": ".",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#ffffff",
-  "theme_color": "#0d47a1",
-  "lang": "ru",
-  "scope": "/",
+  "theme_color": "#002b5c",
   "icons": [
     {
-      "src": "/icons/Icon-192.png",
+      "src": "icons/favicon.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/Icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/Icon-512.png",
+      "src": "icons/Icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/icons/maskable_icon.png",
+      "src": "icons/maskable_icon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
+    },
+    {
+      "src": "icons/apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png"
     }
   ]
 }
