--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,17 +1,14 @@
 {
   "name": "Sport Diary",
-  "short_name": "SportDiary",
-  "description": "Спортивный дневник для триатлета. Аналитика, тренировки и интеграция со Strava.",
+  "short_name": "Sport Diary",
   "start_url": ".",
   "display": "standalone",
-  "orientation": "portrait",
-  "background_color": "#ffffff",
-  "theme_color": "#002b5c",
+  "background_color": "#0A2E5D",
+  "theme_color": "#0A2E5D",
   "icons": [
-    { "src": "icons/favicon.png", "sizes": "32x32", "type": "image/png" },
-    { "src": "icons/Icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icons/Icon-512.png", "sizes": "512x512", "type": "image/png" },
-    { "src": "icons/maskable_icon.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" },
-    { "src": "icons/apple-touch-icon.png", "sizes": "180x180", "type": "image/png" }
+    { "src": "favicon.png",            "sizes": "32x32",   "type": "image/png", "purpose": "any" },
+    { "src": "icon-192.png",           "sizes": "192x192", "type": "image/png", "purpose": "any" },
+    { "src": "icon-512.png",           "sizes": "512x512", "type": "image/png", "purpose": "any" },
+    { "src": "icon-512-maskable.png",  "sizes": "512x512", "type": "image/png", "purpose": "maskable any" }
   ]
 }
