--- a/web/manifest.json
+++ b/web/manifest.json
@@ -6,9 +6,10 @@
   "background_color": "#0A2E5D",
   "theme_color": "#0A2E5D",
   "icons": [
-    { "src": "favicon.png",            "sizes": "32x32",   "type": "image/png", "purpose": "any" },
-    { "src": "icon-192.png",           "sizes": "192x192", "type": "image/png", "purpose": "any" },
-    { "src": "icon-512.png",           "sizes": "512x512", "type": "image/png", "purpose": "any" },
-    { "src": "icon-512-maskable.png",  "sizes": "512x512", "type": "image/png", "purpose": "maskable any" }
+    { "src": "favicon.png",           "sizes": "32x32",   "type": "image/png", "purpose": "any" },
+    { "src": "apple-touch-icon.png",  "sizes": "180x180", "type": "image/png", "purpose": "any" },
+    { "src": "icon-192.png",          "sizes": "192x192", "type": "image/png", "purpose": "any" },
+    { "src": "icon-512.png",          "sizes": "512x512", "type": "image/png", "purpose": "any" },
+    { "src": "icon-512-maskable.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable any" }
   ]
 }
