--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,44 +1,38 @@
 {
   "name": "Sport Diary",
-  "short_name": "Sport Diary",
-  "description": "Спортивный дневник для триатлета. Аналитика, тренировки и интеграция со Strava.",
-  "version": "1.0.5",
-  "start_url": ".",
-  "scope": ".",
+  "short_name": "SportDiary",
+  "description": "Спортивный дневник для триатлета, анализа тренировок и интеграции со Strava.",
+  "start_url": "/",
   "display": "standalone",
-  "orientation": "portrait",
   "background_color": "#0A2E5D",
   "theme_color": "#0A2E5D",
+  "orientation": "portrait-primary",
   "icons": [
     {
       "src": "icons/favicon.png",
       "sizes": "32x32",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "icons/apple-touch-icon.png",
-      "sizes": "180x180",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
       "src": "icons/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
       "src": "icons/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
-      "src": "icons/icon-512-maskable.png",
+      "src": "icons/maskable_icon.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "maskable"
+    },
+    {
+      "src": "icons/apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png"
     }
   ]
 }
