--- a/netlify.toml
+++ b/netlify.toml
@@ -1,31 +1,11 @@
 [build]
   publish = "build/web"
-  command = "bash ./install_flutter.sh && export PATH=$PATH:`pwd`/flutter/bin && flutter build web --release"
+  command = "bash ./install_flutter.sh && flutter build web --release"
 
-[[plugins]]
-  package = "@netlify/plugin-functions-install-core"
-[[headers]]
-for = "/sw.js"
-  [headers.values]
-  Cache-Control = "no-cache, no-store, must-revalidate"
+[functions]
+  directory = "netlify/functions"
 
-[[headers]]
-for = "/index.html"
-  [headers.values]
-  Cache-Control = "no-cache"
-
-[[headers]]
-for = "/assets/*"
-  [headers.values]
-  Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-for = "/canvaskit/*"
-  [headers.values]
-  Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-for = "/main.dart.js"
-  [headers.values]
-  # Чуть менее агрессивно, чтобы обновления прилетали быстрее
-  Cache-Control = "public, max-age=300, must-revalidate"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
