--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "build/web"
-  command = "bash ./install_flutter.sh && flutter build web --release"
+  command = "bash ./install_flutter.sh && export PATH=\"$PATH:`pwd`/flutter/bin\" && flutter build web --release"
 
 [functions]
   directory = "netlify/functions"
